mb before rebase conflicts

--- a/simple.html
+++ b/simple.html
@@ -12,7 +12,8 @@
 </head>
 <body>
 	<main class="container">
-	<!-- Content Goes Here -->
+	<!-- Content Goes Here
+		changes before rebasing-->
 		<p>
 			Just some content
 			chnage ccc
