mb conflicting changes brewing

--- a/simple.html
+++ b/simple.html
@@ -17,7 +17,8 @@
 		<p>
 			Just some content
 			chnage ccc
-			coypright
+			
+			conflicting changes coypright
 			a change on master
 		</p>
 	</main>
