--- a/simple.html
+++ b/simple.html
@@ -13,7 +13,7 @@
 <body>
 	<main class="container">
 	<!-- Content Goes Here
-		changes before rebasing-->
+		changesdf before rebasing-->
 		<p>
 		nothing but trouble
 			Just some content
